# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gh-actions.yml
gendiff/: __init__.py  cli.py  data_mapping.py  file_opener.py  file_reader.py  generator_diff.py  parser.py
gendiff/formatters/: data_map.py  format_chooser.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: answer_json_nested.json  answer_json_simple.json  f1.yaml  file1.yaml  right_answers.py  t.json  tt.json
