[tool.poetry]
name = "hexlet-second"
version = "0.1.0"
description = "Generate diff"
authors = ["Veronika B <bapplesova@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pytest = "^6.2.5"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
